<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.habitat.HabitatView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="240dp"
            android:background="@color/colorAccent"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:stateListAnimator="@null"
            android:text="@string/button_addImage"
            android:textColor="@color/colorBackground"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/speciesLocation"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/speciesLocation"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="240dp"
            android:background="@color/colorAccent"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:stateListAnimator="@null"
            android:text="@string/button_location"
            android:textColor="@color/colorBackground"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chooseImage" />

        <Button
            android:id="@+id/takeImage"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:background="@color/colorAccent"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:stateListAnimator="@null"
            android:text="@string/button_takeImage"
            android:textColor="@color/colorBackground"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/speciesImage"
            android:layout_width="300dp"
            android:layout_height="177dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <EditText
            android:id="@+id/commonName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:autofillHints="hint"
            android:hint="@string/hint_addCommonName"
            android:maxLength="40"
            android:maxLines="1"
            android:inputType="text"
            android:padding="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/speciesDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speciesImage"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/speciesDescription"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:autofillHints="hint"
            android:hint="@string/hint_speciesDescription"
            android:maxLength="40"
            android:maxLines="1"
            android:padding="4dp"
            android:inputType="text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/commonName"
            tools:layout_editor_absoluteY="244dp" />

        <EditText
            android:id="@+id/habitatType"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:autofillHints="hint"
            android:inputType="text"
            android:hint="@string/hint_habitatType"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speciesDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>